fix layout issue

--- a/gwyon.css
+++ b/gwyon.css
@@ -49,7 +49,7 @@ ul {
 }
 
 #name {
-    width: 240px; 
+    width: 220px; 
     display: block;
     float: left;
 }
